[package]
name = "daos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daos-lib = { git = "https://github.com/dustin4242/daos-lib" }
#daos-lib = { path = "../daos-lib" }
psf-rs = "2.0.2"
bootloader = { git = "https://github.com/dustin4242/daos-bootloader", features = [
  "vga_320x200",
] }
#bootloader = { path = "../daos-bootloader", features = ["vga_320x200"] }
x86_64 = "0.14.11"
pic8259 = "0.10.1"
